[package]
name = "splaycast"
version = "0.4.5"
edition = "2021"
authors = ["momento", "kvcache"]
description = "Stream-specific broadcast channel"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/momentohq/splaycast"
homepage = "https://gomomento.com/"

[lib]
bench = false

[[bench]]
name = "bench_main"
harness = false

[dependencies]
arc-swap        = { version = "1.6" }
futures         = { version = "0.3" }
log             = { version = "0.4" }
crossbeam-queue = { version = "0.3" }

[dev-dependencies]
criterion    = { version = "0.5", features = ["async_tokio"] }
env_logger   = { version = "0.10" }
log          = { version = "0.4", features = ["release_max_level_info"] }
rand         = { version = "0.8" }
test-log     = { version = "0.2" }
tokio        = { version = "1.33", features = ["rt-multi-thread", "macros", "time", "sync"]}
tokio-test   = { version = "0.4"}
tokio-stream = { version = "0.1" }
